--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "jquery": "~2.1.1",
     "angular-ui-router": "~0.2.11",
     "bootbox": "~4.3.0",
-    "angular-cookies": "~1.3.3"
+    "angular-cookies": "~1.3.3",
+    "ladda-bootstrap": "~0.1.0"
   }
 }
